# data_vet

./: .gitignore  pyproject.toml
data/base_files/: vets_geolocation.csv
docs/: shapefile_handler.md
src/data_vet/: generate_district_map.py
src/data_vet/geo/: crs.py  shapefile_handler.py  validators.py
src/data_vet/handlers/: shapefile_handler.py
tests/: test_shapefile_handler.py
